--- a/billing-core/config/sidekiq.yml
+++ b/billing-core/config/sidekiq.yml
@@ -2,3 +2,8 @@
 :queues:
   - default
   - billing
+
+:schedule:
+  invoice_generation:
+    cron: "0 8 1 * *"
+    class: "Billing::InvoiceGenerationJob"
