--- a/billing-core/Gemfile
+++ b/billing-core/Gemfile
@@ -17,6 +17,8 @@ gem "bootsnap", require: false
 
 group :development, :test do
   gem "debug", platforms: %i[ mri mingw x64_mingw ]
+  gem 'pry-remote'
+  gem 'pry-rails'
 end
 
 group :development do
